src/components/LiquidityHouse/LiquidityHouse.module.scss
.lh {
    display: flex;
    align-items: center;
    max-height: 22px;
    gap: 10px;

    :nth-child(2) {
    margin-bottom: 34px;

        @media (min-width: 768px) {
           margin-bottom: 10px;
           }
    
           @media (min-width:1200px) {
           margin-bottom: 2px;
           }
    }

    @media (min-width: 768px) {
        max-height: 38px;
        gap: 12px;
       }

       @media (min-width:1200px) {
        max-height: 62px;
        gap: 16px;
       }

    h2 {
        font-weight: 300;
       color:  #D9FFF0;
       font-size: 1.742rem;
      

       @media (min-width: 768px) {
        font-size: 2.906rem;
       }

       @media (min-width:1200px) {
        font-size: 3.875rem;
       }
    }
}



.logo {
position: relative; 
max-height: 22px;

.svg {
    width: 90px;
    position: relative;
    @media (min-width: 768px) {
        max-height: 38px;
        width: 150px;
        margin-bottom: 16px;
       }
    
       @media (min-width:1200px) {
        max-height: 64px;
        width: 200px;
       }
}

@media (min-width: 768px) {
    max-height: 37px;
   }

   @media (min-width:1200px) {
    max-height: 64px;
   }
}

